--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,109 +1,79 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:fillViewport="true"
+    android:background="@color/colorBackground">
 
-    <LinearLayout
-        android:id="@+id/tab_layout"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="80dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center_horizontal">
+        android:padding="24dp">
 
         <TextView
-            android:id="@+id/tab_login"
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"
-            android:textSize="20sp"
+            android:text="LOGIN TO\nYOUR ACCOUNT"
+            android:textSize="28sp"
+            android:textColor="@color/colorText"
             android:textStyle="bold"
-            android:textColor="#FF9800"
-            android:paddingBottom="4dp"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/tab_indicator_selected"/> <TextView
-            android:id="@+id/tab_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Register"
-            android:textSize="20sp"
-            android:textColor="#AAAAAA"
-            android:paddingBottom="4dp"/>
-    </LinearLayout>
+            android:gravity="center"
+            android:layout_marginTop="60dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_email"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:hint="Email"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout">
-
-        <com.google.android.material.textfield.TextInputEditText
+        <EditText
             android:id="@+id/et_email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="55dp"
+            android:background="@drawable/bg_input_glass"
+            android:hint="Email"
+            android:textColor="@color/colorText"
+            android:textColorHint="#808080"
+            android:paddingStart="16dp"
+            android:inputType="textEmailAddress"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_password"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:hint="Password"
-        app:endIconMode="password_toggle"
-        app:layout_constraintTop_toBottomOf="@id/til_email">
-
-        <com.google.android.material.textfield.TextInputEditText
+        <EditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:background="@drawable/bg_input_glass"
+            android:hint="Password"
+            android:textColor="@color/colorText"
+            android:textColorHint="#808080"
+            android:paddingStart="16dp"
+            android:inputType="textPassword"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/et_email"/>
+
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:text="LOGIN"
+            android:background="@drawable/bg_button_orange"
+            app:backgroundTint="@null" 
+            android:textColor="#FFFFFF"
+            android:layout_marginTop="30dp"
+            android:paddingVertical="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/et_password"/>
 
-    <TextView
-        android:id="@+id/tv_forgot_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forgot Password?"
-        android:textColor="#FF9800"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/til_password"/>
+        <TextView
+            android:id="@+id/tv_register_toggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Don't have an account? Sign Up"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_login"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:textColor="#FFFFFF"
-        android:backgroundTint="#FF9800"
-        android:paddingVertical="14dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />
-
-    <TextView
-        android:id="@+id/tv_or"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="OR"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_login"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 
