--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -9,7 +9,7 @@
         android:id="@+id/img_logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/app_logo"
+        android:src="@drawable/app_icon" 
         app:layout_constraintBottom_toTopOf="@+id/btn_get_started"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
