--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -6,71 +6,42 @@
     android:layout_height="match_parent"
     android:background="?android:attr/windowBackground">
 
-    <!-- Top Left Corner Image (Bada Size aur fitXY) -->
+    <!-- Top Left Image (Thoda sa bara size: 250dp) -->
     <ImageView
         android:id="@+id/shape_top"
-        android:layout_width="220dp"
-        android:layout_height="220dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:src="@drawable/top_left"
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Bottom Right Corner Image (Bada Size aur fitXY) -->
+    <!-- Bottom Right Image (Thoda sa bara size: 250dp) -->
     <ImageView
         android:id="@+id/shape_bottom"
-        android:layout_width="220dp"
-        android:layout_height="220dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:src="@drawable/bottom_right"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Main Content (Left Aligned) -->
-    <LinearLayout
-        android:id="@+id/container_main"
-        android:layout_width="0dp"
+    <!-- Center Text: Sirf BASITSHOP -->
+    <TextView
+        android:id="@+id/txt_brand_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/layout_button"
+        android:text="BASITSHOP"
+        android:textColor="?android:attr/textColorPrimary"
+        android:textSize="42sp"
+        android:textStyle="bold"
+        android:letterSpacing="0.15"
+        android:fontFamily="sans-serif-black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.45"
-        app:layout_constraintHorizontal_bias="0.0">
-
-        <ImageView
-            android:id="@+id/img_logo"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/app_icon"
-            android:elevation="12dp"
-            tools:srcCompat="@tools:sample/avatars" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Welcome\nHome"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textSize="36sp"
-            android:textStyle="bold"
-            android:lineSpacingExtra="-5dp"
-            android:fontFamily="sans-serif-black"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="Experience the future of design\nwith smooth animations."
-            android:textColor="?android:attr/textColorSecondary"
-            android:textSize="16sp"
-            android:lineSpacingExtra="4dp"
-            android:alpha="0.8"/>
-
-    </LinearLayout>
+        app:layout_constraintVertical_bias="0.45" />
 
     <!-- Bottom Button Container -->
     <LinearLayout
@@ -79,13 +50,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="60dp"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <!-- Glass Round Button -->
         <FrameLayout
             android:id="@+id/btn_glass_action"
             android:layout_width="80dp"
