--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -8,19 +8,19 @@
 
     <ImageView
         android:id="@+id/shape_top"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:src="@drawable/top_left"
-        android:scaleType="centerCrop" 
+        android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/shape_bottom"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:src="@drawable/bottom_right"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -30,9 +30,9 @@
         android:layout_height="wrap_content"
         android:text="BASITSHOP"
         android:textColor="?android:attr/textColorPrimary"
-        android:textSize="44sp"
+        android:textSize="42sp"
         android:textStyle="bold"
-        android:letterSpacing="0.2"
+        android:letterSpacing="0.15"
         android:elevation="10dp"
         android:fontFamily="sans-serif-black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="40dp"
         android:clickable="true"
         android:focusable="true"
         android:elevation="10dp"
@@ -56,11 +56,11 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <FrameLayout
-            android:id="@+id/btn_glass_action"
+            android:id="@+id/btn_action_container"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:background="@drawable/bg_glass_round"
-            android:elevation="8dp">
+            android:background="@drawable/bg_orange_outline"
+            android:elevation="0dp">
 
             <ImageView
                 android:id="@+id/icon_arrow"
@@ -68,7 +68,7 @@
                 android:layout_height="32dp"
                 android:layout_gravity="center"
                 android:src="@android:drawable/ic_media_play"
-                android:rotation="-45"
+                android:rotation="90"
                 app:tint="#FF9800" />
         </FrameLayout>
 
@@ -80,7 +80,7 @@
             android:textStyle="bold"
             android:textColor="#FF9800"
             android:layout_marginTop="12dp"
-            android:letterSpacing="0.1"/>
+            android:letterSpacing="0.05"/>
 
     </LinearLayout>
 
