--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:attr/windowBackground">
-
+    android:background="#000000"> 
     <ImageView
         android:id="@+id/shape_top"
         android:layout_width="180dp"
@@ -29,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BASITSHOP"
-        android:textColor="?android:attr/textColorPrimary"
+        android:textColor="@android:color/white"
         android:textSize="42sp"
         android:textStyle="bold"
         android:letterSpacing="0.15"
@@ -47,7 +46,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="50dp"
         android:clickable="true"
         android:focusable="true"
         android:elevation="10dp"
@@ -64,11 +63,10 @@
 
             <ImageView
                 android:id="@+id/icon_arrow"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:src="@android:drawable/ic_media_play"
-                android:rotation="90"
+                android:src="@drawable/ic_triangle_down" 
                 app:tint="#FF9800" />
         </FrameLayout>
 
@@ -79,7 +77,7 @@
             android:textSize="14sp"
             android:textStyle="bold"
             android:textColor="#FF9800"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="8dp"
             android:letterSpacing="0.05"/>
 
     </LinearLayout>
