--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000">
 
+    <!-- Top Left Orange Shape -->
     <ImageView
         android:id="@+id/shape_top"
-        android:layout_width="220dp"
-        android:layout_height="220dp"
+        android:layout_width="240dp"
+        android:layout_height="240dp"
         android:src="@drawable/top_left"
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:translationX="-20dp"
+        android:translationY="-20dp"/>
 
+    <!-- Bottom Right Orange Shape -->
     <ImageView
         android:id="@+id/shape_bottom"
-        android:layout_width="220dp"
-        android:layout_height="220dp"
+        android:layout_width="240dp"
+        android:layout_height="240dp"
         android:src="@drawable/bottom_right"
         android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:translationX="20dp"
+        android:translationY="20dp"/>
 
+    <!-- Brand Name -->
     <TextView
         android:id="@+id/txt_brand_name"
         android:layout_width="wrap_content"
@@ -32,43 +38,43 @@
         android:textColor="@android:color/white"
         android:textSize="42sp"
         android:textStyle="bold"
-        android:letterSpacing="0.15"
-        android:elevation="10dp"
+        android:letterSpacing="0.18"
         android:fontFamily="sans-serif-black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:elevation="12dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.45" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.42"/>
 
+    <!-- Get Started Button -->
     <LinearLayout
         android:id="@+id/layout_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="64dp"
         android:clickable="true"
         android:focusable="true"
-        android:elevation="10dp"
+        android:elevation="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <FrameLayout
             android:id="@+id/btn_action_container"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="@drawable/bg_orange_outline"
-            android:elevation="0dp">
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:background="@drawable/bg_orange_outline">
 
             <ImageView
                 android:id="@+id/icon_arrow"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_triangle_down" 
-                app:tint="#FF9800" />
+                android:src="@drawable/ic_triangle_down"
+                app:tint="#FF9800"/>
         </FrameLayout>
 
         <TextView
@@ -78,9 +84,8 @@
             android:textSize="14sp"
             android:textStyle="bold"
             android:textColor="#FF9800"
-            android:layout_marginTop="8dp"
-            android:letterSpacing="0.05"/>
-
+            android:layout_marginTop="10dp"
+            android:letterSpacing="0.06"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
