--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
+    android:background="?attr/colorBackground">
 
     <!-- Top Left Orange Shape -->
     <ImageView
@@ -12,10 +13,10 @@
         android:layout_height="240dp"
         android:src="@drawable/top_left"
         android:scaleType="fitXY"
+        android:translationX="-24dp"
+        android:translationY="-24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:translationX="-20dp"
-        android:translationY="-20dp"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <!-- Bottom Right Orange Shape -->
     <ImageView
@@ -24,10 +25,10 @@
         android:layout_height="240dp"
         android:src="@drawable/bottom_right"
         android:scaleType="fitXY"
+        android:translationX="24dp"
+        android:translationY="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:translationX="20dp"
-        android:translationY="20dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <!-- Brand Name -->
     <TextView
@@ -35,10 +36,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BASITSHOP"
-        android:textColor="@android:color/white"
         android:textSize="42sp"
         android:textStyle="bold"
         android:letterSpacing="0.18"
+        android:textColor="@color/brand_text"
         android:fontFamily="sans-serif-black"
         android:elevation="12dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -47,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="0.42"/>
 
-    <!-- Get Started Button -->
+    <!-- GET STARTED (OLD IDs, NEW STYLE) -->
     <LinearLayout
         android:id="@+id/layout_button"
         android:layout_width="wrap_content"
@@ -57,35 +58,36 @@
         android:layout_marginBottom="64dp"
         android:clickable="true"
         android:focusable="true"
-        android:elevation="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <FrameLayout
             android:id="@+id/btn_action_container"
-            android:layout_width="76dp"
-            android:layout_height="76dp"
-            android:background="@drawable/bg_orange_outline">
+            android:layout_width="84dp"
+            android:layout_height="84dp"
+            android:background="@drawable/bg_liquid_glass"
+            android:elevation="16dp">
 
             <ImageView
                 android:id="@+id/icon_arrow"
-                android:layout_width="42dp"
-                android:layout_height="42dp"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_triangle_down"
-                app:tint="#FF9800"/>
+                app:tint="@color/orange"/>
         </FrameLayout>
 
         <TextView
+            android:id="@+id/txt_get_started"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Get Started"
             android:textSize="14sp"
             android:textStyle="bold"
-            android:textColor="#FF9800"
-            android:layout_marginTop="10dp"
-            android:letterSpacing="0.06"/>
+            android:textColor="@color/orange"
+            android:layout_marginTop="12dp"
+            android:letterSpacing="0.08"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
