--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -4,9 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorBackground">
+    android:background="@color/app_background">
 
-    <!-- Top Left Orange Shape -->
+    <!-- Top Left Shape -->
     <ImageView
         android:id="@+id/shape_top"
         android:layout_width="240dp"
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <!-- Bottom Right Orange Shape -->
+    <!-- Bottom Right Shape -->
     <ImageView
         android:id="@+id/shape_bottom"
         android:layout_width="240dp"
@@ -30,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <!-- Brand Name -->
+    <!-- Brand -->
     <TextView
         android:id="@+id/txt_brand_name"
         android:layout_width="wrap_content"
@@ -41,14 +41,13 @@
         android:letterSpacing="0.18"
         android:textColor="@color/brand_text"
         android:fontFamily="sans-serif-black"
-        android:elevation="12dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="0.42"/>
 
-    <!-- GET STARTED (OLD IDs, NEW STYLE) -->
+    <!-- Button -->
     <LinearLayout
         android:id="@+id/layout_button"
         android:layout_width="wrap_content"
@@ -56,8 +55,6 @@
         android:orientation="vertical"
         android:gravity="center"
         android:layout_marginBottom="64dp"
-        android:clickable="true"
-        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -75,11 +72,10 @@
                 android:layout_height="44dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_triangle_down"
-                app:tint="@color/orange"/>
+                android:tint="@color/orange"/>
         </FrameLayout>
 
         <TextView
-            android:id="@+id/txt_get_started"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Get Started"
