--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,21 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!-- Primary Brand -->
-    <color name="colorPrimary">#FF6D00</color>
     <color name="orange">#FF9800</color>
 
-    <!-- Backgrounds -->
-    <color name="colorBackground">#121212</color>
-    <color name="app_background">#121212</color>
-    <color name="colorInputBackground">#2C2C2C</color>
+    <!-- Dark with subtle blue tint (INVezto feel) -->
+    <color name="app_background">#0B1020</color>
 
-    <!-- Text -->
-    <color name="colorText">#FFFFFF</color>
     <color name="brand_text">#FFFFFF</color>
-
-    <!-- Basics -->
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-
 </resources>
